force-app/main/default/objects/WebsiteSearch__x/WebsiteSearch__x.object-meta.xml
<CustomObject>
    <description>WebsiteSearch searches content in the main u-blox.com website and shows the results in the community portal. There is an OpenSearch url link defined in the External Data Source &gt; WebsiteSearch. The link is hosted in u-blox.com and returns data in XML format.</description>
    <externalDataSource>WebsiteSearch</externalDataSource>
    <externalName>WebsiteSearch</externalName>
    <label>WebsiteSearch</label>
    <pluralLabel>WebsiteSearch</pluralLabel>
</CustomObject>