force-app/main/default/objects/WebsiteSearch__x/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <externalDeveloperName>Date</externalDeveloperName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>