force-app/main/default/objects/WebsiteSearch__x/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <externalDeveloperName>Summary</externalDeveloperName>
    <label>Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>